<resources>
    <string name="app_name">MeetMe</string>
    <string name="shared_pref_file_key">meet_me_shared_prefs</string>
    <string name="token_pref_key">user_token_pref_key</string>
    <string name="no_internet_alert">API call failed, check internet connection</string>
    <string name="title_activity_maps">Map</string>
    <string name="database_name">my_sqlite_db</string>
    <string name="map_page_title">Events map</string>
    <string name="events_list_page_title">Events list</string>
    <string name="user_profile_page_title">Your profile</string>
    <string name="save_changes">Save</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="birthday">Birthday</string>
    <string name="bio">Bio</string>
    <string name="user_image">user_image</string>
    <string name="zero_rating">0.0</string>
    <string name="users_store_key">users_store_shared_pref</string>
    <string name="events_store_key">events_store_shared_pref</string>
    <string name="data_saved">Data saved</string>
    <string name="facebook_app_id">1422598784536189</string>
    <string name="fb_login_protocol_scheme">fb1422598784536189</string>
    <string name="provider_cancel">Login canceled</string>
    <string name="error_occured">Error occured</string>
    <string name="guests">Guests:</string>
    <string name="join">Join</string>
    <string name="event_full">Event is full :(</string>
    <string name="logout">Logout</string>
    <string name="leave_event">Leave event</string>
    <string name="your_event">It\'s your event!</string>
    <string name="profile">profile</string>
    <string name="cancel_event">Cancel event</string>
    <string name="user_name_empty">Fill your name</string>
    <string name="user_surname_empty">Fill your surname</string>
    <string name="user_email_invalid">Email is invalid</string>
    <string name="get_facebook_data">Get Facebook data</string>
    <string name="rating">Rating</string>
    <string name="event_has_no_images">This event has no images</string>
</resources>
